[fix] card border mobile overflow / prune styles

--- a/src/styles/utils.scss
+++ b/src/styles/utils.scss
@@ -48,7 +48,9 @@
 
 .card-wrapper {
 	position: relative;
+
 	width: max-content;
+	max-width: 100%;
 	padding: 0.15rem 0.15rem 0.35rem 0.15rem;
 	margin: 0 auto;
 
